--- a/chatbot/Cargo.toml
+++ b/chatbot/Cargo.toml
@@ -10,3 +10,7 @@ serde_json = "1.0"
 anyhow = "1.0"
 async-trait = "0.1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+
+# For advanced Nmap functionality
+uuid = { version = "1.0", features = ["v4"] }
+chrono = { version = "0.4", features = ["serde"] }
